<resources>
    <string name="app_name">Sports Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_main">Dashboard</string>
    <string name="title_activity_routes">Activities</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_stats">Details</string>
    <string name="title_all_stats">Stats</string>

    <string name="card_activities">ACTIVITIES</string>
    <string name="card_record">RECORD</string>
    <string name="card_stats">STATS</string>

    <string name="menu_export">Export GPX</string>
    <string name="menu_change_type">Change Type</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_clear_stats">Clear Stats</string>
    <string name="menu_sort">Sort By</string>
    <string name="menu_date">Date</string>
    <string name="menu_type">Type</string>
    <string name="menu_reverse">Reverse Order</string>
    <string name="menu_new_name">New Name</string>

    <string name="drawer_dashboard">Dashboard</string>
    <string name="drawer_map">Map</string>
    <string name="drawer_import">Import</string>
    <string name="drawer_system">System</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_info">Info</string>

    <string name="never_show_again">Never show again</string>
    <string name="motto">Let\'s workout</string>
    <string name="loading">Loading…</string>

    <string name="info_distance">Distance</string>
    <string name="info_altitude">Altitude</string>
    <string name="info_time">Time</string>
    <string name="info_time_moving">Time (moving)</string>
    <string name="info_time_mov">Time (mov)</string>
    <string name="info_avg_speed">Avg speed</string>
    <string name="info_avg_speed_mov">Avg speed (mov)</string>
    <string name="info_avg_pace">Avg pace</string>
    <string name="info_avg_pace_mov">Avg pace (mov)</string>
    <string name="info_elevation_gain">Elevation gain</string>
    <string name="info_ele_gain">Ele gain</string>
    <string name="info_elevation_loss">Elevation loss</string>
    <string name="info_ele_loss">Ele loss</string>
    <string name="info_max_altitude">Max altitude</string>
    <string name="info_min_altitude">Min altitude</string>
    <string name="info_max_speed">Max speed</string>
    <string name="info_max_pace">Max pace</string>
    <string name="info_speed">Speed</string>
    <string name="info_pace">Pace</string>

    <string name="metres">%1$d m</string>

    <string name="route_time">%1$d:%2$s:%3$s</string>
    <string name="route_pace">%1$s:%2$s /km</string>
    <string name="route_pace_null">NaN /km</string>
    <string name="route_speed">%1$.1f km/h</string>
    <string name="route_distance">%1$.2f km</string>

    <string name="stats_count">%1$d</string>
    <string name="stats_time">%1$dh %2$dm</string>
    <string name="stats_distance">%1$d km</string>
    <string name="year_to_date">Year-to-date</string>
    <string name="all_time">All time</string>

    <string name="intentExtra">intentExtra</string>
    <string name="chanelID">chanelID</string>

    <string name="sharedPreferences">sharedPreferences</string>
    <string name="recordingPref">recordingPref</string>
    <string name="routeNamePref">routeNamePref</string>
    <string name="pausePref">pausePref</string>
    <string name="reloadPref">reloadPref</string>
    <string name="renamePref">renamePref</string>

    <string name="mapTypePref">mapTypePref</string>
    <string name="distanceIntervalPref">distanceIntervalPref</string>
    <string name="timeIntervalPref">timeIntervalPref</string>
    <string name="nightModePref">nightModePref</string>
    <string name="autoPausePref">autoPausePref</string>
    <string name="routeTypePref">routeTypePref</string>
    <string name="horizontalPref">horizontalPref</string>
    <string name="verticalPref">verticalPref</string>

    <string name="desc_button_info">Info Button</string>
    <string name="desc_button_pause">Pause Button</string>
    <string name="desc_button_stop">Stop Button</string>
    <string name="desc_type">Type Icon</string>
    <string name="desc_icon">GPS Icon</string>

</resources>
