<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/drawer_dashboard" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/drawer_map" />
    </group>

    <item android:title="@string/drawer_import">
        <menu>
            <item
                android:id="@+id/nav_import"
                android:icon="@drawable/ic_import"
                android:title="@string/drawer_import" />
        </menu>
    </item>

    <item android:title="@string/drawer_system">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/drawer_settings" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title="@string/drawer_info" />
        </menu>
    </item>

</menu>