<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.RecordActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        <!--    <ScrollView-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="match_parent">-->


        <!--            <LinearLayout-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:orientation="vertical">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/tableLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <!--        <FrameLayout-->
            <!--            android:id="@+id/fragment_container"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="match_parent" />-->


            <TableRow
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mapView2">

                <ImageView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/desc_button_info"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_info"
                    android:tint="@color/colorIcon">

                </ImageView>

                <ImageView
                    android:id="@+id/pause"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/desc_button_pause"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_pause"
                    android:tint="@color/colorIcon">

                </ImageView>

                <ImageView
                    android:id="@+id/stop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/desc_button_stop"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_stop"
                    android:tint="@color/colorIcon">

                </ImageView>

            </TableRow>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <!--            </LinearLayout>-->

    <!--    </ScrollView>-->

    <com.google.android.material.navigation.NavigationView

        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--                    <ScrollView-->
            <!--                        android:layout_width="match_parent"-->
            <!--                        android:layout_height="match_parent"-->
            <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                        app:layout_constraintEnd_toEndOf="parent"-->
            <!--                        app:layout_constraintStart_toStartOf="parent"-->
            <!--                        app:layout_constraintTop_toTopOf="parent">-->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_distance" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_altitude" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/altitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </TableRow>

                <View style="@style/divider" />

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_time"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_time_mov"
                        android:textStyle="italic" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="24sp"

                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/timeMoving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="24sp"

                        android:textStyle="bold" />

                </TableRow>

                <View style="@style/divider" />

                <TableRow>

                    <TextView
                        android:id="@+id/avgInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_avg_speed"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/avgMovingInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_avg_speed_mov"
                        android:textStyle="italic" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/avgSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/avgSpeedMoving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </TableRow>

                <View style="@style/divider" />

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_ele_gain" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_ele_loss" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/elevationGain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/elevationLoss"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </TableRow>

                <View style="@style/divider" />

                <TableRow>

                    <TextView
                        android:id="@+id/speedInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_speed" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>

            <!--                    </ScrollView>-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
